; ModuleID = '/home/carl/AnghaBench/systemd/src/resolve/extr_resolved-dns-synthesize.c_dns_synthesize_protocol.c'
source_filename = "/home/carl/AnghaBench/systemd/src/resolve/extr_resolved-dns-synthesize.c_dns_synthesize_protocol.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SD_RESOLVED_DNS = common dso_local global i32 0, align 4
@DNS_PROTOCOL_DNS = common dso_local global i32 0, align 4
@SD_RESOLVED_LLMNR = common dso_local global i32 0, align 4
@DNS_PROTOCOL_LLMNR = common dso_local global i32 0, align 4
@SD_RESOLVED_MDNS = common dso_local global i32 0, align 4
@DNS_PROTOCOL_MDNS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dns_synthesize_protocol(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = load i32, i32* @SD_RESOLVED_DNS, align 4
  %6 = and i32 %4, %5
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = load i32, i32* @DNS_PROTOCOL_DNS, align 4
  store i32 %9, i32* %2, align 4
  br label %26

10:                                               ; preds = %1
  %11 = load i32, i32* %3, align 4
  %12 = load i32, i32* @SD_RESOLVED_LLMNR, align 4
  %13 = and i32 %11, %12
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %10
  %16 = load i32, i32* @DNS_PROTOCOL_LLMNR, align 4
  store i32 %16, i32* %2, align 4
  br label %26

17:                                               ; preds = %10
  %18 = load i32, i32* %3, align 4
  %19 = load i32, i32* @SD_RESOLVED_MDNS, align 4
  %20 = and i32 %18, %19
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %17
  %23 = load i32, i32* @DNS_PROTOCOL_MDNS, align 4
  store i32 %23, i32* %2, align 4
  br label %26

24:                                               ; preds = %17
  %25 = load i32, i32* @DNS_PROTOCOL_DNS, align 4
  store i32 %25, i32* %2, align 4
  br label %26

26:                                               ; preds = %24, %22, %15, %8
  %27 = load i32, i32* %2, align 4
  ret i32 %27
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
